--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="calculator">
         <div class="display">
             <div class="previousNumber">
-                <p>123</p>
-                <span class="mathSign">+</span>
+                <p></p>
+                <span class="mathSign"></span>
             </div>
-            <p class="currentNumber">123</p>
+            <p class="currentNumber"></p>
         </div>
 
         <div class="panel">
