--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="panel">
             <button class="clear">C</button>
             <button class="operator">2^</button>
-            <button class="operator">:</button>
-            <button class="operator">x</button>
+            <button class="operator">/</button>
+            <button class="operator">*</button>
             <button class="number">7</button>
             <button class="number">8</button>
             <button class="number">9</button>
