--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css" />
     <title>Calculator</title>
 </head>
 
@@ -42,7 +43,7 @@
             <button class="number">.</button>
         </div>
     </div>
-    <div class="calculator-history">
+    <div data-simplebar class="calculator-history">
         <p class="history-title">Last Calculations
             <button class="history-btn">Clear History</button>
         </p>
@@ -54,6 +55,8 @@
 
 
     <script src="./main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js"></script>
+
 </body>
 
 </html>
